syntax = "proto3";

package secrets;

option go_package = "github.com/jupyter-naas/naas-models/go/secrets";

import "validate.proto";

message Secret {
    optional string name = 1;
    optional string value = 2; // Thinking of having strings only for simplicity. Kubernetes is doing that for pods env vars.
    // oneof value {
    //     string string_value = 2;
    //     bool bool_value = 3;
    //     int32 int32_value = 4;
    //     int64 int64_value = 5;
    //     double double_value = 6;
    //     float float_value = 7;
    // } 
}

/**
*   Errors
*/

enum SecretError {
    SECRET_NO_ERROR = 0;
    SECRET_ALREADY_EXISTS = 1;
    SECRET_NOT_FOUND = 2;
    SECRET_MARKED_FOR_DELETION = 3;
}

message SecretResponseError {
    optional SecretError error = 1;
    optional string message = 2;
}


// USER SPACE

message SecretCreateRequest {
    optional Secret secret = 1;
}

message SecretCreateResponse {
    optional SecretResponseError error = 1;
}

message SecretGetRequest {
    optional string name = 1;
}

message SecretGetResponse {
    optional Secret secret = 1;
    optional SecretResponseError error = 2;
}

message SecretDeleteRequest {
    optional string name = 1;
}

message SecretDeleteResponse {
    optional SecretResponseError error = 1;
}

message SecretListRequest {
    optional int32 page_size = 1;
    optional int32 page_number = 2;
}

message SecretListResponse {
    repeated Secret secrets = 1;
    optional SecretResponseError error = 2;
}